quartz: Implement gtk_clipboard_get_selection

This function is trivial and can be copied from the X11 implementation.

https://bugzilla.gnome.org/show_bug.cgi?id=772281